tdf#164850 Avoid resetting edit flags when resetting column widths

Change-Id: Id679068be1ff175676b9a79c1c847ba86d43a050
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180450
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>